--- a/springmvc/WebContent/WEB-INF/web.xml
+++ b/springmvc/WebContent/WEB-INF/web.xml
@@ -4,6 +4,10 @@
     xmlns="http://java.sun.com/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping>
 	<servlet>
 		<servlet-name>springmvc</servlet-name>
 		<servlet-class>
